component data parsing basically works, but still buggy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -341,6 +341,14 @@
 				},
 			]
 		},
+		"(//TODO.*)": {
+			"regexFlags": "g", 
+			"decorations": [
+				{ 
+					"color": "#00ff00",
+				},
+			]
+		},
 		//? MINI LANGUAGE
 		"(#.*)": {
 			"regexFlags": "g", 
