--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -509,7 +509,9 @@
 		"string_view": "cpp",
 		"ranges": "cpp",
 		"codecvt": "cpp",
-		"queue": "cpp"
+		"queue": "cpp",
+		"memory": "cpp",
+		"memory_resource": "cpp"
 	},
 
 }
