vulkan mt test, thread pool impl

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -511,7 +511,11 @@
 		"codecvt": "cpp",
 		"queue": "cpp",
 		"memory": "cpp",
-		"memory_resource": "cpp"
+		"memory_resource": "cpp",
+		"stop_token": "cpp",
+		"thread": "cpp",
+		"condition_variable": "cpp",
+		"mutex": "cpp"
 	},
 
 }
