--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,11 +4,11 @@
         {
             "type": "shell",
             "label": "win_build_dbg_gcc",
-            "command": "${workspaceFolder}/build/win_build_dbg_gcc.bat",
+            "command": "${workspaceFolder}/out/win_build_dbg_gcc.bat",
             "args": [
-                "${workspaceFolder}/build/Debug",                    //build dir
+                "${workspaceFolder}/out/Debug",                    //build dir
                 "${workspaceFolder}/src",                         //include headers
-                "${workspaceFolder}/build/Debug/rpg_debug.exe",      //build name
+                "${workspaceFolder}/out/Debug/rpg_debug.exe",      //build name
                 "${workspaceFolder}/src/main.cpp",                //cpp
                 "${workspaceFolder}/ext/lib",                     //libs
             ],
@@ -19,11 +19,11 @@
         {
             "type": "shell",
             "label": "win_build_dbg_msvc",
-            "command": "${workspaceFolder}/build/win_build_dbg_msvc.bat",
+            "command": "${workspaceFolder}/out/win_build_dbg_msvc.bat",
             "args": [
-                "${workspaceFolder}/build/Debug",                    //build dir
+                "${workspaceFolder}/out/Debug",                    //build dir
                 "${workspaceFolder}/src",                         //include headers
-                "${workspaceFolder}/build/Debug/rpg_debug.exe",      //build name
+                "${workspaceFolder}/out/Debug/rpg_debug.exe",      //build name
                 "${workspaceFolder}/src/main.cpp",                //cpp
                 "${workspaceFolder}/ext/lib",                     //libs
             ],
@@ -34,11 +34,11 @@
         {
             "type": "shell",
             "label": "win_build_opt_gcc",
-            "command": "${workspaceFolder}/build/win_build_opt_gcc.bat",
+            "command": "${workspaceFolder}/out/win_build_opt_gcc.bat",
             "args": [
-                "${workspaceFolder}/build/Optimized",                //build dir
+                "${workspaceFolder}/out/Optimized",                //build dir
                 "${workspaceFolder}/src",                         //include headers
-                "${workspaceFolder}/build/Optimized/rpg_optimized.exe",//build name
+                "${workspaceFolder}/out/Optimized/rpg_optimized.exe",//build name
                 "${workspaceFolder}/src/main.cpp",                //cpp
                 "${workspaceFolder}/ext/lib",                     //libs
             ],
